<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/clear_active_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/clear_filters" />



            <include android:id="@+id/read"
                layout="@layout/view_filter_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
            <include android:id="@+id/reading"
                layout="@layout/view_filter_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
            <include android:id="@+id/collected"
                layout="@layout/view_filter_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
            <include android:id="@+id/collecting"
                layout="@layout/view_filter_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
            <include android:id="@+id/anyItemsOwned"
                layout="@layout/view_filter_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
            <include android:id="@+id/standaloneOrSeriesComplete"
                layout="@layout/view_filter_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <include
                android:id="@+id/book_type_autocomplete"
                layout="@layout/view_filter_autocomplete_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <include
                android:id="@+id/format_autocomplete"
                layout="@layout/view_filter_autocomplete_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <include
                android:id="@+id/pub_autocomplete_input"
                layout="@layout/view_filter_autocomplete_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:hint="@string/genre"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <AutoCompleteTextView
                    android:id="@+id/genre_autocomplete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <include
                android:id="@+id/tag_autocomplete"
                layout="@layout/view_filter_autocomplete_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
<!--
            <include
                android:id="@+id/sort_autocomplete"
                layout="@layout/view_filter_autocomplete_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" /> -->

            <Button
                android:id="@+id/apply_filter_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:minHeight="48dp"
                android:text="@string/apply_filter" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>